testdata/golden/sema/valid/ret_block_expr.fmt
fn main() -> int {
    let x = { ret 1; };
    let y = { ret 2; };
    return x + y;
}
